--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -6,6 +6,10 @@ on:
       - '**'       # matches all branches
       - '!gh-pages'  # excludes gh-pages
 
+permissions:
+  contents: write
+  pages: write
+
 jobs:
   build-and-deploy:
     name: Build and deploy (ruby-${{ matrix.ruby_version }})
@@ -28,13 +32,11 @@ jobs:
       - name: Install dependencies
         run: |
           sudo npm install --global pug pug-cli
-          bundle config set path 'vendor/bundle'
-          bundle install
+          make install-deps
 
       - name: Build
         run: |
-          bundle exec jekyll build
-          touch _site/.nojekyll
+          make build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
