--- a/gptme.toml
+++ b/gptme.toml
@@ -1,1 +1,1 @@
-files = ["README.md", "CONTRIBUTING.md", "_config.yml", "Makefile"]
+files = ["README.md", "CONTRIBUTING.md", "_config.yml", "Makefile", "assets/css/tailwind.css", "_layouts/*"]
