--- a/gptme.toml
+++ b/gptme.toml
@@ -1,1 +1,5 @@
-files = ["README.md", "CONTRIBUTING.md", "_config.yml", "Makefile", "assets/css/tailwind.css", "_layouts/*"]
+files = [
+    "README.md", "CONTRIBUTING.md",
+      "_config.yml",
+      "Makefile", "assets/css/tailwind.css",
+      "_layouts/*", "_templates/*"]
