fix: fixed code highlighting

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,12 @@ collections:
 
 # Build settings
 markdown: kramdown
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    line_numbers: false
+    css_class: 'highlight'
 
 exclude:
  - vendor
