chore: add pre-commit hooks to catch build errors before commit
- Add Jekyll build check to catch syntax errors early
- Add standard file checks (trailing whitespace, YAML, etc.)
- Would have caught the Pug syntax error before pushing to CI
- Auto-fixed trailing whitespace in default.pug and about.pug

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,41 @@
 repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v5.0.0
-  hooks:
-  - id: check-yaml
-  - id: end-of-file-fixer
-  - id: trailing-whitespace
-#- repo: local
-#  hooks:
-#  - id: check-markdown-links
-#    name: check markdown links
-#    description: verifies all relative links in markdown files resolve correctly
-#    entry: python3 scripts/precommit/check_markdown_links.py
-#    language: system
-#    types: [markdown]
-#    pass_filenames: true
-#    # exclude example files which intentionally have broken links
-#    exclude: ^projects/.*/examples/.*$
+  # Standard file checks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
+    hooks:
+      - id: trailing-whitespace
+        exclude: '\.min\.(js|css)$'
+      - id: end-of-file-fixer
+        exclude: '\.min\.(js|css)$'
+      - id: check-yaml
+        args: ['--allow-multiple-documents']
+      - id: check-added-large-files
+        args: ['--maxkb=1000']
+      - id: check-merge-conflict
+      - id: check-json
+      - id: mixed-line-ending
+        args: ['--fix=lf']
+
+  # Jekyll/Pug build check - catches syntax errors before commit
+  - repo: local
+    hooks:
+      - id: jekyll-build
+        name: Jekyll Build Test
+        entry: make build
+        language: system
+        pass_filenames: false
+        always_run: false
+        files: '(_includes/|_layouts/|_posts/|_pages/|assets/|_config\.yml|Gemfile)'
+        stages: [pre-commit]
+        verbose: true
+
+  # CSS checks
+  - repo: local
+    hooks:
+      - id: build-css
+        name: Build CSS
+        entry: npm run build:css
+        language: system
+        pass_filenames: false
+        files: 'assets/css/.*\.css$|tailwind\.config\.js'
+        stages: [pre-commit]
