feat: add pre-commit hook to check Pug class syntax
Add validation to catch invalid Pug shorthand syntax with Tailwind modifiers.
Pug's dot notation doesn't support slashes (e.g., .bg-primary/5), which must
be written as class="bg-primary/5" instead.

This prevents rendering issues where malformed syntax appears as text in the
output HTML.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,3 +39,14 @@ repos:
         pass_filenames: false
         files: 'assets/css/.*\.css$|tailwind\.config\.js'
         stages: [pre-commit]
+
+  # Pug template checks
+  - repo: local
+    hooks:
+      - id: check-pug-syntax
+        name: Check Pug Class Syntax
+        entry: python3 scripts/precommit/check_pug_class_syntax.py
+        language: system
+        pass_filenames: false
+        files: '\.pug$'
+        stages: [pre-commit]
