fix: misc changes

--- a/gptme.toml
+++ b/gptme.toml
@@ -1,5 +1,6 @@
 files = [
     "README.md", "CONTRIBUTING.md",
-      "_config.yml",
-      "Makefile", "assets/css/tailwind.css",
-      "_layouts/*", "_templates/*"]
+    "_config.yml",
+    "Makefile", "assets/css/tailwind.css",
+    "_layouts/*", "_templates/*",
+]
