feat(jekyll): add default layouts for collections
- Automatically apply layout: post to all posts
- Automatically apply layout: project to projects and notes
- Eliminates need for layout in frontmatter
- Fixes rendering issues for 8 posts missing layout

Co-authored-by: Bob <bob@superuserlabs.org>

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,24 @@ collections:
         output: true
         permalink: /notes/:title/
 
+# Default layouts for collections
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+      type: "projects"
+    values:
+      layout: "project"
+  - scope:
+      path: ""
+      type: "notes"
+    values:
+      layout: "project"
+
 # Build settings
 markdown: kramdown
 kramdown:
