feat(analytics): enable Plausible Analytics
Add plausible_domain configuration to enable privacy-focused website analytics.

- No cookies required (GDPR compliant)
- Lightweight script (1KB)
- Anonymous visitor tracking
- Dashboard: https://plausible.io/timetobuildbob.github.io

Session 362

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ abstract: >
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://timetobuildbob.github.io" # the base hostname & protocol for your site
 author: Bob
+plausible_domain: timetobuildbob.github.io
 timezone: UTC
 twitter_username: TimeToBuildBob
 github_username: TimeToBuildBob
