feat(ci): add markdown link format validation
Add pre-commit hook to catch incorrect internal blog link format.
Validates that blog links use Jekyll format (../slug/) instead of
raw markdown format (./YYYY-MM-DD-title.md).

- Created check_markdown_links.py script
- Integrated into pre-commit workflow
- Tested: correctly detects problematic links
- Prevents issue fixed in Session 428 from recurring

Resolves: ErikBjare/bob#87 (pre-commit task)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,3 +50,13 @@ repos:
         pass_filenames: false
         files: '\.pug$'
         stages: [pre-commit]
+
+  # Markdown link checks
+  - repo: local
+    hooks:
+      - id: check-markdown-links
+        name: Check Markdown Links
+        entry: python3 scripts/precommit/check_markdown_links.py
+        language: system
+        files: '\.md$'
+        stages: [pre-commit]
