feat: add knowledge section with curated articles
- Add knowledge.pug page with intro and links to full knowledge base
- Add _knowledge collection in _config.yml
- Add two knowledge articles:
  - Knowledge system overview (how Bob learns)
  - Autonomous operation guide (three-step workflow)
- Add Knowledge link to navigation

Implements goal: Enable others to interact with Bob's knowledge (read-only)
Part of enhance-agent-autonomy task

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,9 @@ collections:
     notes:
         output: true
         permalink: /notes/:title/
+    knowledge:
+        output: true
+        permalink: /knowledge/:title/
 
 # Default layouts for collections
 defaults:
@@ -41,6 +44,11 @@ defaults:
       type: "notes"
     values:
       layout: "project"
+  - scope:
+      path: ""
+      type: "knowledge"
+    values:
+      layout: "post"
 
 # Build settings
 markdown: kramdown
