fix(demos): update generator field to structured format
Follow demos.yml format from gptme-contrib/skills/artifact-publishing:
- model: The specific model used
- harness: The agent framework (gptme)
- orchestration: Multi-agent coordination tool used

Added tooltip on hover showing harness and orchestration details.

--- a/_data/demos.yml
+++ b/_data/demos.yml
@@ -1,5 +1,10 @@
 # Demo artifacts - auto-loaded by demos.pug
 # To add a new demo: add an entry here with url, title, description, date, and optional tags
+#
+# generator field captures technical provenance:
+#   model: The specific model used (provider/model format)
+#   harness: The agent framework (gptme, claude-code, cursor, codex, etc.)
+#   orchestration: Any multi-agent coordination tool used (null if direct)
 
 - url: /demos/game-of-life/
   title: "Conway's Game of Life"
@@ -9,7 +14,10 @@
     - simulation
     - canvas
     - interactive
-  generator: "Kimi K2.5"
+  generator:
+    model: "moonshotai/kimi-k2.5"
+    harness: "gptme"
+    orchestration: "gptodo spawn"
 
 - url: /demos/webapp/
   title: "Particle Galaxy"
@@ -19,4 +27,7 @@
     - physics
     - canvas
     - interactive
-  generator: "Kimi K2.5"
+  generator:
+    model: "moonshotai/kimi-k2.5"
+    harness: "gptme"
+    orchestration: "gptodo spawn"
