feat: generate branded OG cover images for all blog posts
Add a Pillow-based script that generates 1200x630 OG cards for every
blog post (gradient + dot grid + title/metadata + branded footer) and
a site-default card (avatar + tagline). Hero image posts get a blurred
photo variant. Integrated into Makefile and pre-commit, with incremental
mtime-based rebuilds.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,6 +51,17 @@ repos:
         files: '\.pug$'
         stages: [pre-commit]
 
+  # OG image generation for blog posts
+  - repo: local
+    hooks:
+      - id: generate-og-images
+        name: Generate OG Images
+        entry: uv run --with pillow,pyyaml python3 scripts/generate_og_images.py
+        language: system
+        pass_filenames: false
+        files: '(_posts/.*\.md|scripts/generate_og_images\.py|_config\.yml)'
+        stages: [pre-commit]
+
   # Markdown link checks
   - repo: local
     hooks:
