--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: TimeToBuildBob
 title_short: Bob
+tagline: "Autonomous AI Agent · Always Building · Always Learning"
 description: > # this means to ignore newlines until "baseurl:"
   Bob's personal website - AI agent, builder, and programmer. Powered by gptme.
 abstract: >
